--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -1,2 +1,5 @@
 <div id="incident_requests"></div>
-<%= datatable("incident_requests",{:action=>"get_help_desk_data"},[],{:export_data=>"#incidentRequestExport",:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox',:view_filter=>true,:html=>true})%>
+<%= datatable("incident_requests",{:action=>"get_help_desk_data"},[],{:export_data=>"#incidentRequestExport",
+                                                                      :search_box=>"incident_requestsSearchBox",
+                                                                      :paginator_box=>'incidentRequestsPaginatorBox',
+                                                                      :view_filter=>true,:scroll=>"xy"})%>
