--- a/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -1,14 +1,14 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:request_number,{:title=>t(:label_icm_incident_request_request_number_shot), :width => "55px"})%>
-  <% builder.column(:title,{:title=>t(:label_icm_incident_request_title),:searchable=>true})  do |data|%>
+  <% builder.column(:title,{:title=>t(:label_icm_incident_request_title),:searchable=>true,:width => "480px"})  do |data|%>
         <% if(data[:reply_flag].eql?("Y") && data[:close_flag].eql?("N"))%>
            <%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
         <% end %>
         <%= link_to( "(#{data[:incident_status_id_label]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
   <% end %>
-  <% builder.column(:organization_id_label,{:title=>t(:label_icm_incident_request_organization),:searchable=>true})%>
+  <% builder.column(:organization_id_label,{:title=>t(:label_icm_incident_request_organization),:searchable=>true,:width => "120px"})%>
   <% builder.column(:priority_id_label,{:title=>t(:label_icm_incident_request_priority), :width => "60px"})%>
   <% builder.column(:requested_by_label,{:title=>t(:label_icm_incident_request_requested_by), :width => "90px"})%>
-  <% builder.column(:last_request_date,{:title=>t(:label_icm_incident_request_last_date), :width => "150px"})%>
-  <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:width => "180px"})%>
+  <% builder.column(:last_request_date,{:title=>t(:label_icm_incident_request_last_date), :width => "150px",:sortable=>true})%>
+  <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:width => "130px"})%>
 <% end %>
