修改lov，改用bootstrap样式进行替换

--- a/app/views/irm/list_of_values/_lov_result.html.erb
+++ b/app/views/irm/list_of_values/_lov_result.html.erb
@@ -1,7 +1,7 @@
 
 <% label_field = @fields.detect{|i| i[:label]};value_field = @fields.detect{|i| i[:value_field]} %>
 <!--  irm datatable      -->
-<div class="irm-datatable">
+<div class="datatable">
   <div>
       <table>
         <thead>
