--- a/app/views/irm/list_of_values/lov_result.html.erb
+++ b/app/views/irm/list_of_values/lov_result.html.erb
@@ -1,30 +1,23 @@
 <body style="padding:5px;">
-  <div class="listRelatedObject setupBlock">
-      <div class="page-block">
-        <div class="pbHeader">
-          <table cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-              <tr>
-                <td class="pbTitle"><h2 class="mainTitle"><%= Irm::BusinessObject.class_name_to_meaning(@business_object.bo_model_name) %></h2></td>
-                <td class="pbButton">
-                </td>
-                <td class="pbHelp">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="pbBody">
-          <% if @datas.any? %>
-              <% if lookup_context.template_exists?("#{@business_object.bo_model_name.pluralize.underscore}/lov",[],true) %>
-                  <%= render :partial => "#{@business_object.bo_model_name.pluralize.underscore}/lov" %>
-              <% else %>
-                  <%= render :partial => "lov_result" %>
-              <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= Irm::BusinessObject.class_name_to_meaning(@business_object.bo_model_name) %></h2>
+      </td>
+      <td class="page-block-button"></td>
+      <td class="page-block-help"></td>
+    </tr></table>
+    <div class="page-block-body">
+      <% if @datas.any? %>
+          <% if lookup_context.template_exists?("#{@business_object.bo_model_name.pluralize.underscore}/lov",[],true) %>
+              <%= render :partial => "#{@business_object.bo_model_name.pluralize.underscore}/lov" %>
           <% else %>
-            <%=   render :partial => "helper/datatable_no_data" %>
+              <%= render :partial => "lov_result" %>
           <% end %>
-        </div>
-      </div>
+      <% else %>
+        <%=   render :partial => "helper/datatable_no_data" %>
+      <% end %>
+    </div>
   </div>
 </body>
