修改查看变更单页面的tabs样式

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1976,6 +1976,7 @@ fieldset legend {
 @import "framework/setting";
 @import "plugins/mask";
 @import "framework/datepicker";
+@import "framework/tabs";
 
 
 
