--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -82,8 +82,18 @@
     </div>
 
     <div class="sub-page-block">
+      <div class="tabs-container">
+      <%= mx_tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
+                             {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}},
+                             {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}},
+                             {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}},
+                             {:label=>t(:label_chm_change_request_tab_approve),:url=>{:controller=>"chm/change_requests",:action=>"show_approve"},:params=>{:id=>@change_request.id}},
+                             {:label=>t(:label_com_config_item),:url=>{:controller=>"chm/change_requests",:action=>"show_config"},:params=>{:id=>@change_request.id}}])  %>
+      <%= render(:partial=>partial) %>
+      </div>
+      <!--
       <div class="tabbable">
-        <%= tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
+        <%#= tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
                        {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}},
                        {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}},
                        {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}},
@@ -91,10 +101,10 @@
                        {:label=>t(:label_com_config_item),:url=>{:controller=>"chm/change_requests",:action=>"show_config"},:params=>{:id=>@change_request.id}}])  %>
         <div class="tab-content">
           <div class="tab-pane active">
-           <%= render(:partial=>partial) %>
+           <%#= render(:partial=>partial) %>
           </div>
         </div>
-      </div>
+      </div>  -->
     </div>
 
   </div>
