修改表格无数据时的显示形式

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1201,7 +1201,7 @@ div.min-block-body {
 }
 
 .datatable table tr.no-data div{
-    text-align: center;
+    text-align: left;
 }
 .table-placeholder{
     min-height: 55px;
