--- a/app/views/chm/change_requests/get_data.html.erb
+++ b/app/views/chm/change_requests/get_data.html.erb
@@ -1,193 +1,195 @@
 <style type="text/css">
-  .table_icon {
-      display: inline;
-      background: #FFFFFF transparent;
-  }
-  .table_icon tr {
-      background-color:#fff !important;
-      background-color:transparent !important;
-  }
-  .table_icon tr td { background-color:transparent;}
-  .table_icon a.expand_icon {
-      background: url('../images/filter_hide.gifx') no-repeat 0 0 transparent;
-      width: 16px;
-      height: 16px;
-      text-indent:-9999px;
-      display: block;
-  }
-  .table_icon a.collapse_icon {
-      background: url('../images/filter_reveal.gifx') no-repeat 0 0 transparent;
-      width: 16px;
-      height: 16px;
-      text-indent:-9999px;
-      display: none;
-  }
-  .table_icon .workflow {
-      width: 18px;
-      height: 18px;
-  }
-  .table_icon .requested { background: url('../images/workflow_requested.gif') no-repeat 0 0 transparent;}
-  .table_icon .active {background: url('../images/workflow_active.gif') no-repeat 0 0 transparent;}
-  .table_icon .pending {background: url('../images/workflow_pending.gif') no-repeat 0 0 transparent;}
-  .table_icon .complete {background:  url('../images/workflow_complete.gif') no-repeat 0 0 transparent;}
-  .table_icon .closed {background: url('../images/workflow_approval_rejected.gif') no-repeat 0 0 transparent;}
+    .datatable table tbody table.table-icon {
+        background-color: transparent;
+        text-align: left;
+    }
 
-  .table_icon td {
-      background: transparent !important;
-      border: 0 !important;
-  }
-  .table_icon span {
-      float: left !important;
-  }
-  .table_icon .expand {
-      min-width: 80px;
-      display: block;
-  }
-  .table_icon .name {
-      display: none;
-      padding: 3px;
+    .datatable table tbody table.table-icon tr {
+        background-color: transparent;
+    }
 
-  }
-  .table_icon .header_name {
-      background: transparent !important;
-      padding: 2px 3px !important;
-      display: block;
-      min-width: 50px;
-  }
-  .expand .name {
-      display: inline-block !important;
-      min-width: 60px;
-      clear: left;
-  }
-  td.vt {
-    vertical-align: top;
-    padding: 4px 6px 4px 7px !important;
-    white-space: normal;
-    display:table-cell;
-  }
+    .datatable table tbody table.table-icon tr td {
+        background-color: transparent;
+        border: none;
+    }
+
+
+    .datatable table tbody table.table-icon tr td.div {
+        padding: 0px;
+        border: none;
+    }
+
+    .datatable table tbody table.table-icon tr td.vt {
+        width: 21px;
+    }
+
+    .table-icon a.expand-icon {
+        background: url('../images/filter_hide.gifx') no-repeat 0 0 transparent;
+        width: 16px;
+        height: 16px;
+        text-indent: -9999px;
+        display: block;
+    }
+
+    .table-icon a.collapse-icon {
+        background: url('../images/filter_reveal.gifx') no-repeat 0 0 transparent;
+        width: 16px;
+        height: 16px;
+        text-indent: -9999px;
+        display: none;
+    }
+
+    .table-icon .workflow {
+        width: 18px;
+        height: 18px;
+    }
+
+    .table-icon .requested {
+        background: url('../images/workflow_requested.gif') no-repeat 0 0 transparent;
+    }
+
+    .table-icon .active {
+        background: url('../images/workflow_active.gif') no-repeat 0 0 transparent;
+    }
+
+    .table-icon .pending {
+        background: url('../images/workflow_pending.gif') no-repeat 0 0 transparent;
+    }
+
+    .table-icon .complete {
+        background: url('../images/workflow_complete.gif') no-repeat 0 0 transparent;
+    }
+
+    .table-icon .closed {
+        background: url('../images/workflow_approval_rejected.gif') no-repeat 0 0 transparent;
+    }
+
+    .table-icon td {
+        background: transparent;
+        border: none;
+    }
+
+    .table-icon td.expends div {
+        float: left;
+        display: inline;
+        padding: 0;
+        border: none;
+    }
+
+    .table-icon td.expand div {
+        display: block;
+        float: none;
+    }
+
+    .table-icon td.expends div.name {
+        display: none;
+    }
+
+    .table-icon td.expand div.name  {
+        display: block;
+    }
+
+    .table-icon .expand {
+        min-width: 80px;
+        display: block;
+    }
+
+    .table-icon .name {
+        display: none;
+        padding: 3px;
+
+    }
+
+    .table-icon .header-name {
+        background: transparent;
+        padding: 2px 3px !important;
+        display: block;
+        min-width: 50px;
+    }
+
+    .expand .name {
+        display: inline-block;
+        min-width: 60px;
+        clear: left;
+    }
+
+    td.vt {
+        vertical-align: top;
+        padding: 4px 6px 4px 7px;
+        white-space: normal;
+        display: table-cell;
+    }
 </style>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $(".expand_icon").bind('click', function(){
+    $(document).ready(function () {
+        $(".expand-icon").bind('click', function () {
             var parent_table = $(this).parent();
-            parent_table.find(".collapse_icon").css("display", "block");
+            parent_table.find(".collapse-icon").css("display", "block");
             $(this).hide();
             parent_table.parent().parent().find(".expends").addClass("expand");
         });
-        $(".collapse_icon").bind('click', function(){
+        $(".collapse-icon").bind('click', function () {
             var parent_table = $(this).parent();
-            parent_table.find(".expand_icon").show();
+            parent_table.find(".expand-icon").show();
             $(this).hide();
             parent_table.parent().parent().find(".expends").removeClass("expand");
         });
     });
 </script>
-<!--  icm datatable      -->
- <div class="datatable">
-   <div>
-       <table count="<%=@count%>">
-         <thead>
-           <tr>
-             <th style="width:40px">
-               <div><%= t(:label_chm_change_request_request_number) %></div>
-             </th>
-             <th style="width:200px;">
-               <div><%= t(:label_chm_change_request_title) %></div>
-             </th>
-             <th style="width:110px;">
-               <div><%= t(:label_chm_change_request_stage) %></div>
-             </th>
-             <th style="width: 120px;">
-               <div><%= t(:label_chm_change_request_incident) %></div>
-             </th>
-             <th style="width: 80px;">
-               <div><%= t(:label_chm_change_request_plan) %></div>
-             </th>
-             <th style="width:150px;">
-               <div><%= t(:label_chm_change_request_implement) %></div>
-             </th>
-             <th style="width:100px;">
-               <div><%= t(:label_chm_change_request_approve) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_chm_change_request_organization) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_chm_change_request_change_priority) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_chm_change_request_requested_by) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_chm_change_request_submitted_date) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_chm_change_request_external_system) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% merge_datas(@datas).each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div><%= data.request_number %></div>
-           </td>
-           <td>
-             <div><%= link_to(data.title, {:controller => 'chm/change_requests', :action => 'show', :id => data.id}) %></div>
-           </td>
-           <!-- 状态 -->
-           <td class="vt">
-              <table class="table_icon">
-                <tr>
-                   <td class="vt">
-                     <span>
-                       <a class="expand_icon" href="javascript:void(0);" title="expand">expand</a>
-                       <a class="collapse_icon" href="javascript:void(0);" title="collapse">collapse</a>
-                     </span>
-                   </td>
-                   <td class="expends"><%= build_stage_collapse(data.change_status_id) %></td>
-                </tr>
-              </table>
-           </td>
-           <td class="vt">
-              <table class="table_icon">
-                <tr><%= change_incident_show(data[:incidents], data.id) %></tr>
-              </table>
-           </td>
-           <td class="vt">
-             <table class="table_icon">
-                <tr>
-                   <%= change_pan_show(data) %>
-                </tr>
-             </table>
-           </td>
-           <td class="vt">
-             <table class="table_icon">
-                <tr><%= change_request_tasks(data.id) %></tr>
-             </table>
-           </td>
-           <td>
-             <div><%= data[:approve_status_meaning] %></div>
-           </td>
-           <td>
-             <div><%= data.organization_id_label %></div>
-           </td>
-           <td>
-             <div><%= data.change_priority_id_label %></div>
-           </td>
-           <td>
-             <div><%= data.requested_by_label %></div>
-           </td>
-           <td>
-             <div><%= format_date(data.submitted_date) %></div>
-           </td>
-           <td>
-             <div><%= data.external_system_id_label %></div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end icm datatable      -->
+
+
+<%= datatable_view({:count => @count, :datas => @datas}) do |builder| %>
+    <% builder.column(:request_number, {:title => t(:label_chm_change_request_request_number), :width => "40px"}) %>
+    <% builder.column(:title, {:title => t(:label_chm_change_request_title), :searchable => true, :width => "400px"}) do |data| %>
+        <%= link_to(data.title, {:controller => 'chm/change_requests', :action => 'show', :id => data.id}) %>
+    <% end %>
+    <% builder.column(:change_status_id, {:title => t(:label_chm_change_request_stage), :width => "120px"}) do |data| %>
+        <table class="table-icon">
+          <tr>
+            <td class="vt">
+               <span>
+                 <a class="expand-icon" href="javascript:void(0);" title="expand">expand</a>
+                 <a class="collapse-icon" href="javascript:void(0);" title="collapse">collapse</a>
+               </span>
+            </td>
+            <td class="expends"><%= build_stage_collapse(data.change_status_id) %></td>
+          </tr>
+        </table>
+    <% end %>
+    <% builder.column(:incidents, {:title => t(:label_chm_change_request_incident), :width => "120px"}) do |data| %>
+        <table class="table-icon">
+          <tr><%= change_incident_show(data[:incidents], data.id) %></tr>
+        </table>
+    <% end %>
+    <% builder.column(:plans, {:title => t(:label_chm_change_request_plan), :width => "200px"}) do |data| %>
+        <table class="table-icon">
+          <tr>
+            <%= change_pan_show(data) %>
+          </tr>
+        </table>
+    <% end %>
+    <% builder.column(:implements, {:title => t(:label_chm_change_request_implement), :width => "250px", :sortable => true}) do |data| %>
+        <table class="table-icon">
+          <tr><%= change_request_tasks(data.id) %></tr>
+        </table>
+    <% end %>
+    <% builder.column(:approve_stauts, {:title => t(:label_chm_change_request_approve), :width => "130px"}) do |data| %>
+        <%= data[:approve_status_meaning] %>
+    <% end %>
+    <% builder.column(:origanization_id, {:title => t(:label_chm_change_request_organization), :width => "130px"}) do |data| %>
+        <%= data.organization_id_label %>
+    <% end %>
+    <% builder.column(:change_priority_id, {:title => t(:label_chm_change_request_change_priority), :width => "130px"}) do |data| %>
+        <%= data.change_priority_id_label %>
+    <% end %>
+    <% builder.column(:requrested_by, {:title => t(:label_chm_change_request_requested_by), :width => "130px"}) do |data| %>
+        <%= data.requested_by_label %>
+    <% end %>
+    <% builder.column(:submitted_date, {:title => t(:label_chm_change_request_submitted_date), :width => "130px"}) do |data| %>
+        <%= format_date(data.submitted_date) %>
+    <% end %>
+    <% builder.column(:external_system_id_, {:title => t(:label_chm_change_request_external_system), :width => "130px"}) do |data| %>
+        <%= data.external_system_id_label %>
+    <% end %>
+<% end %>
+
