--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -25,7 +25,7 @@
                                                                               :li_attrs => "id" } %>
          </td>
          <td class="side-content">
-           <%= datatable("entry_headers_list",{:action=>"get_data",:column_id => @column_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox"})%>
+           <%= datatable("entry_headers_list",{:action=>"get_data",:column_id => @column_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox",:scroll=>{:mode=>"xy",:height=>250}})%>
            <div id="paginatorBox"></div>
          </td>
        </tr>
