--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1207,19 +1207,21 @@ div.min-block-body {
     min-height: 55px;
 }
 
-
-.datatable-scroll .table-body table thead tr{
-    height: 0px;
-    line-height: 0px;
-    th{
-        height: 0px;
-        line-height: 0px;
-        border: none;
-        div{
-            display: none;
-            }
-        }
+.datatable-scroll .table-body>table{
+    margin-top: -24px;
 }
+//.datatable-scroll .table-body table thead tr{
+//    height: 0px;
+//    line-height: 0px;
+//    th{
+//        height: 0px;
+//        line-height: 0px;
+//        border: none;
+//        div{
+//            display: none;
+//            }
+//        }
+//}
 
 
 .scrollx .table-header,.scrollxy .table-header{
