--- a/app/views/icm/incident_requests/assign_dashboard.html.erb
+++ b/app/views/icm/incident_requests/assign_dashboard.html.erb
@@ -7,37 +7,41 @@
         <h2 class="block-title"><%= t(:label_icm_incident_request_assignable_list) %></h2>
       </td>
       <td class="page-block-button">
-        <%= link_to t(:label_icm_incident_journal_back_to_request_list), {:controller=>"icm/incident_requests",:action => "index"},:class => "btn"%>
+        <%= link_to t(:label_icm_incident_journal_back_to_request_list), {:controller => "icm/incident_requests", :action => "index"}, :class => "btn" %>
       </td>
     </tr>
   </table>
   <div class="page-block-body">
-    <%= datatable("incident_requests",{:action=>"assignable_data",:format=>"json"},[],{:select=>"multiple",:paginator_box=>'incidentRequestsPaginatorBox'})%>
+    <%= datatable("incident_requests", {:action => "assignable_data", :format => "json"}, [], {:select => "multiple", :paginator_box => 'incidentRequestsPaginatorBox'}) %>
     <div id="incidentRequestsPaginatorBox"></div>
     <div class="sub-page-block">
       <div class="sub-page-block-body">
-        <%= form_tag({:action=>"assign_request",:format=>:js},:remote=>true) do |f|%>
-          <%= hidden_field_tag(:incident_request_ids,:id=>"incident_request_ids")  %>
-          <table class="form-table">
-            <tbody>
+        <%= form_tag({:action => "assign_request", :format => :js}, :remote => true) do |f| %>
+            <%= hidden_field_tag(:incident_request_ids, :id => "incident_request_ids") %>
+            <table class="form-table">
+              <tbody>
               <tr>
-                <td class="label-col" style="width:10%"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
+                <td class="label-col" style="width:10%">
+                  <label for="incident_request_support_group_id"><%= t(:label_icm_incident_request_support_group) %></label>
+                </td>
                 <td class="data-col" style="width:30%">
-                  <%=blank_select_tag :support_group_id,available_support_group,{},{:id=>"incident_request_support_group_id"}%></td>
-                <td class="label-col" style="width:10%"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-                <td class="data-col" style="width:30%"><%= blank_select_tag(:support_person_id,[],{},
-                                    {
-                                     :id=>"incident_request_support_person_id",
-                                     :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
-                                     :depend=>"incident_request_support_group_id",
-                                     }) %></td>
+                  <%= blank_select_tag :support_group_id, available_support_group, {}, {:id => "incident_request_support_group_id"} %></td>
+                <td class="label-col" style="width:10%">
+                  <label for="incident_request_support_person_id"><%= t(:label_icm_incident_request_support_person) %></label>
+                </td>
+                <td class="data-col" style="width:30%"><%= blank_select_tag(:support_person_id, [], {},
+                                                                            {
+                                                                                    :id => "incident_request_support_person_id",
+                                                                                    :href => url_for(:controller => "icm/support_groups", :action => "get_member_options", :format => "json", :id => "${incident_request_support_group_id}"),
+                                                                                    :depend => "incident_request_support_group_id",
+                                                                            }) %></td>
                 <td class="data-col" style="width:20%">
-                  <%= submit_tag(t(:label_icm_incident_request_assign),{:id=>"formSubmit",:disabled=>true,:class=>"btn btn-primary"})  %>
+                  <%= submit_tag(t(:label_icm_incident_request_assign), {:id => "formSubmit", :disabled => true, :class => "btn btn-primary"}) %>
                 </td>
 
               </tr>
-            </tbody>
-          </table>
+              </tbody>
+            </table>
         <% end %>
       </div>
     </div>
@@ -46,18 +50,18 @@
 
 
 <script type="text/javascript">
-    $(document).ready(function(){
-        $("#incident_request_support_group_id").cascade("#incident_request_support_person_id") ;
-        $("#incident_requests").bind('selectionchange',function(event,ids){
+    $(document).ready(function () {
+        $("#incident_request_support_group_id").cascade("#incident_request_support_person_id");
+        $("#incident_requests").bind('selectionchange', function (event, ids) {
             $("#incident_request_ids").val(ids.join(","));
-            if(ids.length>0)
+            if (ids.length > 0)
                 $("#formSubmit").removeAttr("disabled");
             else
-              $("#formSubmit").attr("disabled",true);
+                $("#formSubmit").attr("disabled", true);
         });
     });
 </script>
 
-<% content_for :sidebar do%>
-    <%= render :partial =>"/icm/incident_requests/quick_create" %>
+<% content_for :sidebar do %>
+    <%= render :partial => "/icm/incident_requests/quick_create" %>
 <% end %>
