--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -41,7 +41,7 @@
                                                                         :li_attr => 'id'} %>
          </td>
          <td class="side-content">
-           <%= datatable("report_list",{:action=>"get_data", :folder_id => @folder_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox"})%>
+           <%= datatable("report_list",{:action=>"get_data", :folder_id => @folder_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox",:scroll=>{:mode=>"xy",:height=>250}})%>
            <div id="paginatorBox"></div>
          </td>
        </tr>
