--- a/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/tabs.less
@@ -43,6 +43,12 @@
   padding-top:11px;
   position:relative;
   text-decoration:none;}
-.tabs-container:first-child .page-block  {
+.tabs-container> .mx-tab-content{
+    overflow:auto}
+.tabs-container>.mx-tab-content>.mx-tab-pane{
+    display:none}
+.tabs-container>.mx-tab-content>.active{
+    display:block}
+.tabs-container:first-child .page-block,.mx-tab-pane>.page-block:first-child {
     border-top: none !important;
 }
