修正IE6系统登录页面

--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -12,7 +12,7 @@
           <div id="gradientwrap">
             <div class="bottom">
               <div class="login-form-box">
-                <div class="content_new">
+                <div class="content-new">
                 <%= form_tag({:action=> "login"},{:id=>"login_form"}) do %>
                    <%= back_url_hidden_field_tag %>
                       <% if params[:error] %>
