--- a/modules/bootstrap/app/assets/stylesheets/framework/login/login.ie6.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/login/login.ie6.css.less
@@ -14,217 +14,261 @@
 @bkRedButtonRightPath: asset-path('plugins/login/bk_red_button_right.png');
 
 .login-form-box #login_form .login-error {
-    color:#FF0000;
-    padding-bottom:10px;
-    text-align:center;
-    width:310px;
+    color: #FF0000;
+    padding-bottom: 10px;
+    text-align: center;
+    width: 310px;
 }
 
 #forgotpasswordbox {
-    background:url(@widePath) no-repeat scroll 0 0 transparent;
-    min-height:300px;
-    padding:42px 108px 50px 43px;
-    width:744px;
+    background: url(@widePath) no-repeat scroll 0 0 transparent;
+    min-height: 300px;
+    padding: 42px 108px 50px 43px;
+    width: 744px;
 }
+
 #forgotpasswordboxbottom {
-    background:url(@wideBottomPath) no-repeat scroll 0 0 transparent;
-    display:block;
-    height:28px;
-    margin-bottom:26px;
-    width:895px;
+    background: url(@wideBottomPath) no-repeat scroll 0 0 transparent;
+    display: block;
+    height: 28px;
+    margin-bottom: 26px;
+    width: 895px;
 }
 
 .login-form-box .grow-button .rightside, #forgotpasswordbox .grow-button .rightside {
-    background:url(@bkRedButtonRightPath) no-repeat scroll 100% 0 transparent;
-    display:block;
-    padding:9px 16px 12px 13px;
+    background: url(@bkRedButtonRightPath) no-repeat scroll 100% 0 transparent;
+    display: block;
+    padding: 9px 16px 12px 13px;
 }
 
 #forgotpasswordbox p {
-    color:#464646;
-    font-size:12px;
-    line-height:19px;
-    margin:0 30px 17px 0;
+    color: #464646;
+    font-size: 12px;
+    line-height: 19px;
+    margin: 0 30px 17px 0;
 }
 
 #forgotpasswordbox h1 {
-    color:#000000;
-    font-size:16px;
-    font-weight:bold;
-    line-height:22px;
-    margin:0 0 4px;
-    padding:5px 0 13px;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 22px;
+    margin: 0 0 4px;
+    padding: 5px 0 13px;
 }
 
 #forgotpasswordbox div.inputbox {
-    background:none no-repeat scroll 0 0 transparent;
-    overflow:hidden;
-    padding-bottom:7px;
-    position:relative;
+    background: none no-repeat scroll 0 0 transparent;
+    overflow: hidden;
+    padding-bottom: 7px;
+    position: relative;
 }
 
 #forgotpasswordbox div.inputbox label {
-    color:#666666;
-    float:left;
-    font-size:12px;
-    height:1.333em;
-    line-height:14px;
-    padding-right:5px;
-    padding-top:6px;
-    text-align:right;
+    color: #666666;
+    float: left;
+    font-size: 12px;
+    height: 1.333em;
+    line-height: 14px;
+    padding-right: 5px;
+    padding-top: 6px;
+    text-align: right;
 }
 
 #forgotpasswordbox div.inputbox span.inputcontainer {
-    display:block;
-    float:left;
-    height:2.167em;
-    padding:4px 0 0;
-    width:300px;
+    display: block;
+    float: left;
+    height: 2.167em;
+    padding: 4px 0 0;
+    width: 300px;
 }
-#forgotpasswordbox div.inputbox span input {height:22px;margin:0;width:280px;}
-#forgotpasswordbox .grow-button_container {float:left;}
+
+#forgotpasswordbox div.inputbox span input {
+    height: 22px;
+    margin: 0;
+    width: 280px;
+}
+
+#forgotpasswordbox .grow-button_container {
+    float: left;
+}
+
 #forgotpasswordbox a.grow-button {
-    color:#FFFFFF;
-    font-weight:normal;
-    margin-left:0;
-    margin-top:1px;
+    color: #FFFFFF;
+    font-weight: normal;
+    margin-left: 0;
+    margin-top: 1px;
 }
+
 .login-form-box .grow-button, #forgotpasswordbox .grow-button, #forgotpasswordbox a.grow-button:visited {
-    color:#FFFFFF;
-    display:inline-block;
-    font-size:11px;
-    font-weight:bold;
-    line-height:13px;
-    margin:8px 0 0 -6px;
-    min-width:1px;
-    text-decoration:none;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 13px;
+    margin: 8px 0 0 -6px;
+    min-width: 1px;
+    text-decoration: none;
 }
-#forgotpasswordbox a, #forgotpasswordbox a:visited {color:#015BA7;text-decoration:none;}
+
+#forgotpasswordbox a, #forgotpasswordbox a:visited {
+    color: #015BA7;
+    text-decoration: none;
+}
+
 .login-form-box .grow-button .container, #forgotpasswordbox .grow-button .container {
-    background:url(@bkRedButtonPath) no-repeat scroll 0 0 transparent;
-    display:block;
-    margin:0 -1px 0 0;
-    padding:0;
+    background: url(@bkRedButtonPath) no-repeat scroll 0 0 transparent;
+    display: block;
+    margin: 0 -1px 0 0;
+    padding: 0;
 }
+
 .login-form-box .grow-button .rightside, #forgotpasswordbox .grow-button .rightside {
-    background:url(@bkRedButtonRightPath) no-repeat scroll 100% 0 transparent;
-    display:block;
-    padding:9px 16px 12px 13px;
+    background: url(@bkRedButtonRightPath) no-repeat scroll 100% 0 transparent;
+    display: block;
+    padding: 9px 16px 12px 13px;
 }
-.login-form-box .grow-button:hover .rightside, #forgotpasswordbox .grow-button:hover .rightside {background-position: 100% -34px;}
-.login-form-box .grow-button:hover .container, #forgotpasswordbox .grow-button:hover .container {background-position: 0 -34px;}
+
+.login-form-box .grow-button:hover .rightside, #forgotpasswordbox .grow-button:hover .rightside {
+    background-position: 100% -34px;
+}
+
+.login-form-box .grow-button:hover .container, #forgotpasswordbox .grow-button:hover .container {
+    background-position: 0 -34px;
+}
+
 /*****************************************************************/
-*#loginpage{
-    text-align:left;
+*#loginpage {
+    text-align: left;
     margin: 0;
 }
 
 #loginpage #gradientwrap {
-    background:url(@bkBluegradientTopPath) no-repeat scroll 0 0 transparent;
-    width:956px;
-    text-align:left;
+    background: url(@bkBluegradientTopPath) no-repeat scroll 0 0 transparent;
+    width: 956px;
+    text-align: left;
 }
 
 #gradientwrap {
-    overflow:visible;
+    overflow: visible;
 }
+
 #loginpage #gradientwrap .bottom {
-    background:url(@bkBluegradientBottomPath) no-repeat scroll 0 100% transparent;
-    margin:0;
-    overflow:hidden;
-    padding:41px 0 0 33px;
-    width:100%;
+    background: url(@bkBluegradientBottomPath) no-repeat scroll 0 100% transparent;
+    margin: 0;
+    overflow: hidden;
+    padding: 41px 0 0 33px;
+    width: 100%;
 }
+
 .login-form-box {
-    float:left;
+    float: left;
     margin-bottom: 9px;
     padding-bottom: 10px;
-    width:395px;
+    width: 395px;
     overflow: hidden;
 }
+
 .login-form-box .content-new {
-    background:url(@bottomNewPath) no-repeat scroll 0 0 transparent;
-    /*height:auto !important;*/
-    margin:0;
-    height:331px;
-    overflow:hidden;
-    padding:39px 10px 13px 41px;
-    /*+padding:39px 10px 102px 41px;*/
-    width:395px;
+    background: url(@bottomNewPath) no-repeat scroll 0 0 transparent;
+/*height:auto !important;*/
+    margin: 0;
+    height: 331px;
+    overflow: hidden;
+    padding: 39px 10px 13px 41px;
+/*+padding:39px 10px 102px 41px;*/
+    width: 395px;
 }
 
 #loginpage #gradientwrap .login-form-box .bottom_new {
-    display:block;
-    height:28px;
-    margin:0;
-    padding:0;
+    background: url(@bottomNewBottomPath) no-repeat scroll 0 100% transparent;
+    display: block;
+    height: 28px;
+    margin: 0;
+    padding: 0;
 }
+
 .login-form-box #login_form div {
-    background:none no-repeat scroll 0 0 transparent;
-    overflow:hidden;
-    padding-bottom:7px;
-    position:relative;
-    width:100%;
+    background: none no-repeat scroll 0 0 transparent;
+    overflow: hidden;
+    padding-bottom: 7px;
+    position: relative;
+    width: 100%;
 }
+
 .login-form-box #login_form .inputbox label {
-    height:1.333em;
-    padding-bottom:4px;
-    padding-right:2px;
-    padding-top:4px;
+    height: 1.333em;
+    padding-bottom: 4px;
+    padding-right: 2px;
+    padding-top: 4px;
 }
+
 .login-form-box #login_form div span {
-    display:block;
-    height:2.167em;
-    padding:3px 0 0;
-    width:300px;
+    display: block;
+    height: 2.167em;
+    padding: 3px 0 0;
+    width: 300px;
 }
+
 .login-form-box #login_form input.txtbox {
-    height:1.8em;
-    height:1.333em\9;/* for ie */
-    margin:0;
-    width:280px;
+    height: 1.8em;
+    height: 1.333 em\9; /* for ie */
+    margin: 0;
+    width: 280px;
 }
+
 .login-form-box #login_form {
-    color:#666666;
-    font-size:12px;
-    line-height:14px;
+    color: #666666;
+    font-size: 12px;
+    line-height: 14px;
 }
+
 .inputs {
-    padding-left:10px;
+    padding-left: 10px;
 }
+
 .login-form-box #login_form .rememberme-txt {
-    background-image:none;
-    float:none;
-    font-size:12px;
-    line-height:14px;
-    min-height:2.833em;
-    padding:0 0 0 10px;
-    width:100%;
+    background-image: none;
+    float: none;
+    font-size: 12px;
+    line-height: 14px;
+    min-height: 2.833em;
+    padding: 0 0 0 10px;
+    width: 100%;
 
 }
-.login-form-box #login_form .rememberme-txt input {float:left;}
-.login-form-box #login_form .rememberme-txt label {
-    float:left;
-    line-height:20px;
+
+.login-form-box #login_form .rememberme-txt input {
+    float: left;
 }
-.login-form-box #login_form .rememberme-txt {font-size:12px;line-height:14px;}
+
+.login-form-box #login_form .rememberme-txt label {
+    float: left;
+    line-height: 20px;
+}
+
+.login-form-box #login_form .rememberme-txt {
+    font-size: 12px;
+    line-height: 14px;
+}
+
 div.login-button a[type="submit"] {
     -moz-border-radius: 3px 3px 3px 3px;
     -webkit-border-radius: 3px;
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     border-color: #B5B5B5 #B5B5B5 #7F7F7F;
-	border-width: 1px;
+    border-width: 1px;
     border-style: solid;
-	text-decoration: none;
-	color:#333333;
-	display: inline-block;
-	padding: 0 12px;
-	height: 22px;
+    text-decoration: none;
+    color: #333333;
+    display: inline-block;
+    padding: 0 12px;
+    height: 22px;
     font-size: 1em;
     font-weight: bold;
-	line-height: 22px;
-    float:left;
-    margin:4px 9px 5px 12px;
+    line-height: 22px;
+    float: left;
+    margin: 4px 9px 5px 12px;
 }
 
 *#sumbitlogin {
@@ -232,103 +276,113 @@ div.login-button a[type="submit"] {
     -webkit-border-radius: 3px;
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     border-color: #B5B5B5 #B5B5B5 #7F7F7F;
-	border-width: 1px;
+    border-width: 1px;
     border-style: solid;
-	text-decoration: none;
-	color:#333333;
-	display: inline-block;
-	padding: 0 12px;
-	height: 22px;
+    text-decoration: none;
+    color: #333333;
+    display: inline-block;
+    padding: 0 12px;
+    height: 22px;
     font-size: 1em;
     font-weight: bold;
-	line-height: 22px;
-    float:left;
-    margin:4px 9px 5px 12px;
+    line-height: 22px;
+    float: left;
+    margin: 4px 9px 5px 12px;
 }
 
-div.login-button a:hover[type=submit]{background-position: right -30px;}
+div.login-button a:hover[type=submit] {
+    background-position: right -30px;
+}
+
 .login-form-box #login_form .login-button {
-    height:2.833em;
-    padding-bottom:1.75em;
+    height: 2.833em;
+    padding-bottom: 1.75em;
 }
+
 #newheader {
-    background:url(@headerBgPath) no-repeat scroll 0 7px transparent;
-    height:91px;
-    overflow:visible;
-    padding-bottom:0 !important;
-    text-align:left;
-    width:955px;
+    background: url(@headerBgPath) no-repeat scroll 0 7px transparent;
+    height: 91px;
+    overflow: visible;
+    padding-bottom: 0 !important;
+    text-align: left;
+    width: 955px;
 }
+
 #pagewrap {
-margin:0 auto;
-padding:0 10px;
-width:990px;
+    margin: 0 auto;
+    padding: 0 10px;
+    width: 990px;
 }
 
 .login-form-box #login_form .forgotpass {
-    background-color:#FFFFFF;
-    color:#356FB6;
-    display:inline-block;
-    margin-right:30px;
-    margin-top:8px;
-    text-decoration:none;
-    width:160px;
+    background-color: #FFFFFF;
+    color: #356FB6;
+    display: inline-block;
+    margin-right: 30px;
+    margin-top: 8px;
+    text-decoration: none;
+    width: 160px;
 }
 
 #signupcontent .signupbox, .login-form-box .signupbox {
-    color:#333333;
-    font-size:14px;
-    line-height:17px;
-    margin:0;
-    padding:20px 0 0;
-    text-align:center;
-    width:320px;
+    background: url(@horizontalRuleDotted362Path) no-repeat scroll 0 0 transparent;
+    color: #333333;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 0;
+    padding: 20px 0 0;
+    text-align: center;
+    width: 320px;
 }
 
 #shoutoutframe {
     border-style: none;
     border-width: 0;
-    border-collapse:collapse;
-    float:left;
-    height:420px;
-    height:410px\9;
-    margin-bottom:0;
-    margin-left:8px;
-    width:520px;
-    width:489px\9;
-    overflow:hidden\9;
+    border-collapse: collapse;
+    float: left;
+    height: 410px;
+    margin-bottom: 0;
+    margin-left: 8px;
+    width: 489px;
+    overflow: hidden;
 }
+
 .infobar {
-    background:url(@bkInfobarPath) no-repeat scroll 0 0 transparent;
-    clear:both;
-    color:#666666;
-    overflow:hidden;
-    padding:15px 0 0 27px;
-    width:100%;
+    background: url(@bkInfobarPath) no-repeat scroll 0 0 transparent;
+    clear: both;
+    color: #666666;
+    overflow: hidden;
+    padding: 15px 0 0 27px;
+    width: 100%;
 }
+
 .infobar_bottom {
-    background:url(@bkInfobarBottomPath) no-repeat scroll 0 0 transparent;
-    clear:both;
-    display:block;
-    height:24px;
-    margin:0 0 34px;
+    background: url(@bkInfobarBottomPath) no-repeat scroll 0 0 transparent;
+    clear: both;
+    display: block;
+    height: 24px;
+    margin: 0 0 34px;
 }
-.infobar .col1 {padding-left:22px;}
+
+.infobar .col1 {
+    padding-left: 22px;
+}
 
 .infobar .col {
-    float:left;
-    font-size:12px;
-    line-height:14px;
-    margin:0 31px 0 0;
-    width:381px;
+    float: left;
+    font-size: 12px;
+    line-height: 14px;
+    margin: 0 31px 0 0;
+    width: 381px;
 }
+
 .infobar .col h2 {
-    background:url(@horizontalRuleDotted378Path) no-repeat scroll 0 100% transparent;
-    font-size:15px;
-    font-weight:bold;
-    line-height:17px;
-    margin:0 0 4px;
-    padding:4px 0;
+    background: url(@horizontalRuleDotted378Path) no-repeat scroll 0 100% transparent;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 17px;
+    margin: 0 0 4px;
+    padding: 4px 0;
 }
 
 /**************** footer ********************/
@@ -360,13 +414,16 @@ body .page-footer a, body .page-footer {
     color: #cbcbcb;
     font-size: 12px;
 }
+
 div.no-table-footer {
     margin-left: 0;
 }
+
 .no-table-footer {
     clear: both;
     margin-left: 205px;
 }
+
 .page-footer {
     border-top-color: #E8E8E8;
     border-top-style: solid;
