修正split-table在IE7下的显示效果

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1879,10 +1879,9 @@ table.split-table {
         vertical-align: top;
     }
     .side-bar {
-        width: 15%;
+        width: 200px;
     }
     .side-content {
-        width: 85%;
     }
 
 }
