修正ie6下的显示效果

--- a/app/views/chm/change_requests/index.html.erb
+++ b/app/views/chm/change_requests/index.html.erb
@@ -1,4 +1,7 @@
 <style type="text/css">
+    .icm-incident-requests .page-block{
+        width: 100%;
+    }
     .datatable table tbody table.table-icon {
         background-color: transparent;
         text-align: left;
@@ -141,7 +144,7 @@
 <%= common_title %>
 <%= view_filter("CHM_CHANGE_REQUESTS_INDEX","CHM_CHANGE_REQUESTS","requests") %>
 
-<div class="page-block">
+<div class="page-block" style="width: 100%;">
   <table class="page-block-header">
     <tr>
       <td class="page-block-title">
