--- a/modules/bootstrap/app/views/layouts/bootstrap_application_right.html.erb
+++ b/modules/bootstrap/app/views/layouts/bootstrap_application_right.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<%= I18n.locale%>" class="<%= controller_action_css_class%>">
+<html lang="<%= I18n.locale%>" class="<%= controller_action_css_class%>"  debug="true">
 <head>
   <%= render "layouts/head" %>
 
