--- a/modules/bootstrap/app/assets/stylesheets/application.css
+++ b/modules/bootstrap/app/assets/stylesheets/application.css
@@ -3,9 +3,10 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require bootstrap/bootstrap_and_overrides
+ *= require bootstrap/bootstrap
  *= require framework/framework
  *= require plugins/treeview
+ *= require browser/ie7
 */
 
 
