为系统中select控件添加查询功能： 1、当select的option项大于25，自动启用查询功能； 2、当select由属性chosen = true 时

--- a/modules/bootstrap/app/assets/stylesheets/application.css
+++ b/modules/bootstrap/app/assets/stylesheets/application.css
@@ -6,6 +6,8 @@
  *= require bootstrap/bootstrap_and_overrides
  *= require framework/framework
  *= require plugins/treeview
+ *= require plugins/jquery-chosen
+ *= require plugins/chosen_and_overrides
 */
 
 
