修正ie6下的显示效果

--- a/modules/bootstrap/app/assets/stylesheets/browser/ie6.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/browser/ie6.css.less
@@ -8,7 +8,7 @@
 
 
     .container-fluid {
-        padding: 10px;
+        padding: 0;
     }
 
     .form-search input, .form-inline input, .form-horizontal input, .form-search textarea, .form-inline textarea, .form-horizontal textarea, .form-search select, .form-inline select, .form-horizontal select, .form-search .help-inline, .form-inline .help-inline, .form-horizontal .help-inline, .form-search .uneditable-input, .form-inline .uneditable-input, .form-horizontal .uneditable-input, .form-search .input-prepend, .form-inline .input-prepend, .form-horizontal .input-prepend, .form-search .input-append, .form-inline .input-append, .form-horizontal .input-append {
@@ -197,6 +197,11 @@
             background-color: transparent;
             padding: 12px 8px;
         }
+    }
+
+
+    .sub-page-block .sub-page-block-body{
+        text-align: left;
     }
 
 }
