添加颜色选择器控件

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -2011,6 +2011,7 @@ fieldset legend {
 @import "framework/setting";
 @import "plugins/mask";
 @import "framework/datepicker";
+@import "framework/colorpicker";
 @import "framework/tabs";
 
 
